--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <script src="https://kit.fontawesome.com/98e1afc489.js" crossorigin="anonymous"></script>
   <!-- CSSファイルの読み込み -->
   <link rel="stylesheet" href="style.css">
